--- a/WebChat/backend/appsettings.json
+++ b/WebChat/backend/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultConnection": "Server=localhost,1433;Database=master;User Id=SA;Password=Aa123123-;Encrypt=False;"
 }
