--- a/WebChat/backend/appsettings.json
+++ b/WebChat/backend/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultConnection": "Server=localhost,1433;Database=master;User Id=SA;Password=Aa123123-;Encrypt=False;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=master;User Id=SA;Password=Aa123123-;Encrypt=False;"
+  }
 }
